// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`describe when the TicketList Component is given showAddTicketDialog as false TicketList should show the addTicketDialog open as false 1`] = `
<div>
  <h1>
    Closed
  </h1>
  <TicketTable
    tickets={
      Array [
        Object {
          "_id": "id1",
          "deleted": false,
          "description": "closedDescription",
          "storyPoint": 3,
          "title": "closedTicketTitle",
        },
      ]
    }
  />
  <h1>
    Sprint
  </h1>
  <WithStyles(Button)
    onClick={[Function]}
    title="Close Sprint"
  >
     Close Sprint 
  </WithStyles(Button)>
  <TicketTable
    onClose={[Function]}
    onRemoveFromSprint={[Function]}
    tickets={
      Array [
        Object {
          "_id": "id1",
          "deleted": false,
          "description": "sprintDescription",
          "storyPoint": 3,
          "title": "sprintTicketTitle",
        },
      ]
    }
  />
  <h1>
    Backlog
  </h1>
  <DraggableList
    listItems={
      Array [
        Object {
          "_id": "id1",
          "deleted": false,
          "description": "backlogDescription",
          "storyPoint": 3,
          "title": "backlogTicketTitle",
        },
      ]
    }
    updateItems={[Function]}
  />
  <WithStyles(Button)
    onClick={[Function]}
    title="Add Ticket"
  >
     Add Ticket 
  </WithStyles(Button)>
  <Connect(AddTicketDialog)
    onRequestClose={[Function]}
    onSubmit={[Function]}
    open={false}
  />
  <Connect(CloseSprintDialog)
    onRequestClose={[Function]}
    onSubmit={[Function]}
    open={false}
  />
</div>
`;

exports[`describe when the TicketList Component is given showAddTicketDialog as true TicketList should show the addTicketDialog open as true 1`] = `
<div>
  <h1>
    Closed
  </h1>
  <TicketTable
    tickets={
      Array [
        Object {
          "_id": "id1",
          "deleted": false,
          "description": "closedDescription",
          "storyPoint": 3,
          "title": "closedTicketTitle",
        },
      ]
    }
  />
  <h1>
    Sprint
  </h1>
  <WithStyles(Button)
    onClick={[Function]}
    title="Close Sprint"
  >
     Close Sprint 
  </WithStyles(Button)>
  <TicketTable
    onClose={[Function]}
    onRemoveFromSprint={[Function]}
    tickets={
      Array [
        Object {
          "_id": "id1",
          "deleted": false,
          "description": "sprintDescription",
          "storyPoint": 3,
          "title": "sprintTicketTitle",
        },
      ]
    }
  />
  <h1>
    Backlog
  </h1>
  <DraggableList
    listItems={
      Array [
        Object {
          "_id": "id1",
          "deleted": false,
          "description": "backlogDescription",
          "storyPoint": 3,
          "title": "backlogTicketTitle",
        },
      ]
    }
    updateItems={[Function]}
  />
  <WithStyles(Button)
    onClick={[Function]}
    title="Add Ticket"
  >
     Add Ticket 
  </WithStyles(Button)>
  <Connect(AddTicketDialog)
    onRequestClose={[Function]}
    onSubmit={[Function]}
    open={true}
  />
  <Connect(CloseSprintDialog)
    onRequestClose={[Function]}
    onSubmit={[Function]}
    open={false}
  />
</div>
`;
